--- a/Natours/initialHeroScreen/package.json
+++ b/Natours/initialHeroScreen/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass2css": "node-sass sass/main.scss css/style.css"
+    "sass2css": "node-sass sass/main.scss css/style.css -w"
   },
   "keywords": [],
   "author": "",
